# ED-AFK-Notifier

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.json
resources/: res.lib  resources.rc
src/: index.ts  main.rs
