[package]
name = "ED-AFK-Notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ed-journals = "0.4.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.38"
serde_json = "1.0.117"
serde = { version = "1.0.203",features = ["derive"]}
pushover = "0.4.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic="abort"
